[project]
name = "refra-hybrid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "et-xmlfile==2.0.0",
    "fonttools==4.61.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.8",
    "numpy==2.4.2",
    "obspy>=1.4.2",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "pillow==12.1.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "scipy==1.17.0",
    "setuptools>=82.0.0",
    "six==1.17.0",
]
